# actix-node-benchmark

./: .gitignore  Cargo.toml  Case.mmd  README.md  benchmarks.sh  docker-compose.yml  report.lua  snapshot.sh
actix-bench/: .env  Cargo.toml  Dockerfile
actix-bench/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
actix-bench/src/sql/: get_tasks.sql  get_tasks_full.sql
actix-raw/: Cargo.toml  Dockerfile
actix-raw/src/: create_tasks.rs  get_task.rs  lib.rs  main.rs  pg_connection.rs
actix-raw/src/texts/: fnames.json  lnames.json
benchit/: Cargo.toml
benchit/src/: main.rs
db/: Dockerfile  create  init.sh  init.sql  query.sql
drill/: search.yml
node/: app.js  package-lock.json  package.json
node-bench/: package-lock.json  package.json
node-bench/db/: knex.js
node-bench/model/: task.js
node-bench/routes/: index.js
node-raw/: Dockerfile  package-lock.json  package.json
node-raw/cache/: get_task.js
node-raw/db/: api.js
node-raw/rest/: api_pg.js
node/cache/: get_task.js
node/db/: api.js  knex.js  pg.js
node/rest/: api.js  api_pg.js
node/routes/: error.js  index.js
sped-actix/: Cargo.toml  Dockerfile
sped-actix/src/: create_tasks.rs  get_task.rs  get_tasks.rs  lib.rs  main.rs  pg_connection.rs
sped-actix/src/texts/: ring.txt
