[package]
name = "actix-node"
version = "0.1.0"
description = "Benchmark comparison of node and actix-web with various DB backends"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "actix" ]
