[package]
name = "actix_raw"
version = "0.1.0"
description = "Actix-web example microservice for benchmark: raw postgres implementation"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.9", features = ["http"] }
actix-web = "2.0.0"
serde = "1"
actix-rt = "1"
tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
bytes = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["time"] }
rand = { version = "0.6" }
lipsum = "0.6"
serde_json = "1"
env_logger = "0.7"