[package]
name = "benchit"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "0.2", features = ["process", "rt-threaded", "macros", "io-util", "time"] }
psutil = "3"
anyhow = "1"
regex = "1"
itertools = "0.8"