[package]
name = "sped-actix"
version = "0.1.0"
description = "Data-local web service with KVS and search"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stub"
path = "src/bin/stub.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = { version = "0.9", features = ["http"] }
actix-web = "2.0.0"
serde = "1"
actix-rt = "1"
tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
bytes = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["time"] }
rand = { version = "0.6" }
lipsum = "0.6"
serde_json = "1"